fix timezone error on mobiles

--- a/css/custom.css
+++ b/css/custom.css
@@ -64,7 +64,6 @@ a {
 
 .splash-head {
     border: 2px solid #FFE2C2;
-    text-shadow: 2px 2px #A06A2E;
 }
 
 .splash-container a {
